--- a/src/sass/modules/_testimonials.scss
+++ b/src/sass/modules/_testimonials.scss
@@ -3,3 +3,94 @@
     padding-bottom: 4%;
     background-color: #1a1814;
 }
+
+#section7-content {
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+}
+
+.section7-row {
+    width: 233%;
+    display: flex;
+}
+
+.section7-elem {
+    height: 400px;
+    width: 100%;
+    transition: 0.4s;
+}
+
+.section7-cadre {
+    width: 100%;
+    height: 60%;
+    padding: 20px 3%;
+    color: #ffffff;
+    margin: auto;
+    position: relative;
+}
+
+.section7-cadre p {
+    font-style: italic;
+    margin: 0 15px 0 15px;
+    padding: 20px 20px 60px 20px;
+    background: #26231d;
+    position: relative;
+    border-radius: 6px;
+    position: relative;
+}
+
+.section7-cadre i {
+    color: #cca35c;
+    font-size: 2em;
+}
+
+.section7-cadre img {
+    width: 90px;
+    border-radius: 50%;
+    margin: -40px 0 0 40px;
+    position: relative;
+    z-index: 2;
+    border: 6px solid rgba(255, 255, 255, 0.2);
+}
+
+.section7-name h3 {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px 0 5px 45px;
+    color: white;
+}
+
+.section7-name h4 {
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.6);
+    margin: 0 0 0 45px;
+}
+
+.section7-cadre .section7-name {
+    position: absolute;
+    left: 5%;
+    bottom: -50%;
+}
+
+#section7-btnList {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    margin-top: 30px;
+}
+
+.section7-btn {
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    background-color: rgba(255, 255, 255, 0.4);
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+
+.section7-btn:hover {
+    background-color: $orangeux;
+}
