--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -32,7 +32,7 @@ header {
 header::before {
     content: '';
     position: absolute;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('../../../public/img/hero-bg.jpg') top center;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../../public/img/hero-bg.jpg') top center;
     background-size: cover;
     width: 100%;
     height: 101vh;
@@ -62,10 +62,10 @@ header::before {
 }
 
 .sticky {
-    position: fixed!important;
+    position: fixed !important;
     top: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.8)!important;
+    background-color: rgba(0, 0, 0, 0.8) !important;
 }
 
 .topnav {
@@ -226,14 +226,13 @@ header::before {
     padding: auto;
     border: 1px solid #888;
     border-radius: 10px;
-    width: 40%;
     text-align: center;
     height: 500px;
+    width: 40%;
 }
 
 .closeOne {
     color: #aaaaaa;
-    float: right;
     font-size: 28px;
     font-weight: bold;
 }
@@ -247,6 +246,118 @@ header::before {
 
 .modalBtn {
     border-radius: 25px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    background: linear-gradient(145deg, #f1f4fa, #cbcdd3);
+    height: 100%;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+input {
+    border: none;
+    height: 32px;
+    border-radius: 10px;
+    background: linear-gradient(145deg, #f1f4fa, #cbcdd3);
+    outline: none;
+    font-family: "Nunito Sans", sans-serif;
+}
+
+input[type="text"],
+input[type="password"] {
+    box-shadow: var(--secondary-box-shadow);
+    padding-inline: 20px;
+    height: 49px;
+    width: 60%;
+}
+
+input[type="submit"] {
+    box-shadow: var(--primary-box-shadow);
+    cursor: pointer;
+    font-weight: 800;
+    letter-spacing: 0.8px;
+    height: 50px;
+    font-size: 1rem;
+    color: #5a5a5a;
+    position: relative;
+    z-index: 100;
+    width: 100%;
+}
+
+#title {
+    color: #5a5a5a;
+    font-weight: 800;
+    font-size: 1.1rem;
+    line-height: 1;
+    letter-spacing: 0.8px;
+}
+
+#linksParent {
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+    align-items: center;
+}
+
+#linksParent>a {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 0.8rem;
+    color: gray;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.rip1,
+.rip2 {
+    filter: blur(1px);
+    width: 100%;
+    position: absolute;
+    height: 50px;
+    left: 0;
+    bottom: 0;
+}
+
+.rip1 {
+    box-shadow: 0.4rem 0.4rem 0.8rem #c8d0e7, -0.4rem -0.4rem 0.8rem #fff;
+    background: linear-gradient(to bottom right, #fff 0%, #c8d0e7 100%);
+    animation: waves 2s linear infinite;
+}
+
+.rip2 {
+    box-shadow: 0.4rem 0.4rem 0.8rem #c8d0e7, -0.4rem -0.4rem 0.8rem #fff;
+    animation: waves 2s linear 1s infinite;
+}
+
+@keyframes waves {
+    0% {
+        transform: scale(0.7);
+        opacity: 1;
+        border-radius: 10px;
+    }
+
+    50% {
+        opacity: 1;
+        border-radius: 15px;
+    }
+
+    100% {
+        transform: scale(2);
+        opacity: 0;
+        border-radius: 20px;
+    }
+}
+
+#button {
+    width: 40%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 //Modal Video
