--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21582,11 +21582,7 @@ header::before {
   cursor: pointer;
 }
 
-.modalBtn {
-  border-radius: 25px;
-}
-
-form {
+header #modalOne form {
   display: flex;
   flex-direction: column;
   border-radius: 20px;
@@ -21597,7 +21593,7 @@ form {
   align-items: center;
 }
 
-input {
+header #modalOne input {
   border: none;
   height: 32px;
   border-radius: 10px;
@@ -21606,15 +21602,15 @@ input {
   font-family: "Nunito Sans", sans-serif;
 }
 
-input[type=text],
-input[type=password] {
+header #modalOne input[type=text],
+header #modalOne input[type=password] {
   box-shadow: var(--secondary-box-shadow);
   padding-inline: 20px;
   height: 49px;
   width: 60%;
 }
 
-input[type=submit] {
+header #modalOne input[type=submit] {
   box-shadow: var(--primary-box-shadow);
   cursor: pointer;
   font-weight: 800;
@@ -21627,7 +21623,7 @@ input[type=submit] {
   width: 100%;
 }
 
-#title {
+header #modalOne #title {
   color: #5a5a5a;
   font-weight: 800;
   font-size: 1.1rem;
@@ -21635,14 +21631,14 @@ input[type=submit] {
   letter-spacing: 0.8px;
 }
 
-#linksParent {
+header #modalOne #linksParent {
   display: flex;
   gap: 8px;
   flex-direction: column;
   align-items: center;
 }
 
-#linksParent > a {
+header #modalOne #linksParent > a {
   font-family: "Nunito Sans", sans-serif;
   font-size: 0.8rem;
   color: gray;
@@ -21650,8 +21646,8 @@ input[type=submit] {
   cursor: pointer;
 }
 
-.rip1,
-.rip2 {
+header #modalOne .rip1,
+header #modalOne .rip2 {
   filter: blur(1px);
   width: 100%;
   position: absolute;
@@ -21660,13 +21656,13 @@ input[type=submit] {
   bottom: 0;
 }
 
-.rip1 {
+header #modalOne .rip1 {
   box-shadow: 0.4rem 0.4rem 0.8rem #c8d0e7, -0.4rem -0.4rem 0.8rem #fff;
   background: linear-gradient(to bottom right, #fff 0%, #c8d0e7 100%);
   animation: waves 2s linear infinite;
 }
 
-.rip2 {
+header #modalOne .rip2 {
   box-shadow: 0.4rem 0.4rem 0.8rem #c8d0e7, -0.4rem -0.4rem 0.8rem #fff;
   animation: waves 2s linear 1s infinite;
 }
@@ -21687,7 +21683,7 @@ input[type=submit] {
     border-radius: 20px;
   }
 }
-#button {
+header #modalOne #button {
   width: 40%;
   position: relative;
   display: flex;
