--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -244,11 +244,7 @@ header::before {
     cursor: pointer;
 }
 
-.modalBtn {
-    border-radius: 25px;
-}
-
-form {
+header #modalOne form {
     display: flex;
     flex-direction: column;
     border-radius: 20px;
@@ -259,7 +255,7 @@ form {
     align-items: center;
 }
 
-input {
+header #modalOne input {
     border: none;
     height: 32px;
     border-radius: 10px;
@@ -268,15 +264,15 @@ input {
     font-family: "Nunito Sans", sans-serif;
 }
 
-input[type="text"],
-input[type="password"] {
+header #modalOne input[type="text"],
+header #modalOne input[type="password"] {
     box-shadow: var(--secondary-box-shadow);
     padding-inline: 20px;
     height: 49px;
     width: 60%;
 }
 
-input[type="submit"] {
+header #modalOne input[type="submit"] {
     box-shadow: var(--primary-box-shadow);
     cursor: pointer;
     font-weight: 800;
@@ -289,7 +285,7 @@ input[type="submit"] {
     width: 100%;
 }
 
-#title {
+header #modalOne #title {
     color: #5a5a5a;
     font-weight: 800;
     font-size: 1.1rem;
@@ -297,14 +293,14 @@ input[type="submit"] {
     letter-spacing: 0.8px;
 }
 
-#linksParent {
+header #modalOne #linksParent {
     display: flex;
     gap: 8px;
     flex-direction: column;
     align-items: center;
 }
 
-#linksParent>a {
+header #modalOne #linksParent>a {
     font-family: "Nunito Sans", sans-serif;
     font-size: 0.8rem;
     color: gray;
@@ -312,8 +308,8 @@ input[type="submit"] {
     cursor: pointer;
 }
 
-.rip1,
-.rip2 {
+header #modalOne .rip1,
+header #modalOne .rip2 {
     filter: blur(1px);
     width: 100%;
     position: absolute;
@@ -322,13 +318,13 @@ input[type="submit"] {
     bottom: 0;
 }
 
-.rip1 {
+header #modalOne .rip1 {
     box-shadow: 0.4rem 0.4rem 0.8rem #c8d0e7, -0.4rem -0.4rem 0.8rem #fff;
     background: linear-gradient(to bottom right, #fff 0%, #c8d0e7 100%);
     animation: waves 2s linear infinite;
 }
 
-.rip2 {
+header #modalOne .rip2 {
     box-shadow: 0.4rem 0.4rem 0.8rem #c8d0e7, -0.4rem -0.4rem 0.8rem #fff;
     animation: waves 2s linear 1s infinite;
 }
@@ -352,7 +348,7 @@ input[type="submit"] {
     }
 }
 
-#button {
+header #modalOne #button {
     width: 40%;
     position: relative;
     display: flex;
