--- a/src/sass/modules/_events.scss
+++ b/src/sass/modules/_events.scss
@@ -153,3 +153,29 @@
 .italicPara {
     font-style: italic;
 }
+
+@media screen and (max-width: 768px) {
+    .section5-test {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+    .slider,
+.slider .imgs {
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+    position: relative;
+}
+
+    .section5-test {
+        display: flex;
+        flex-direction: column;
+    }
+    .section5-text {
+        width: 100%;
+    }
+}
