--- a/src/sass/modules/_footer.scss
+++ b/src/sass/modules/_footer.scss
@@ -146,5 +146,31 @@ footer .copyright {
 
 // Media queries
 @media screen and (max-width: 991px) {
-
+    .restaurantlyFooter {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .footerInfo, .fashionLinks, .footerNews {
+        width: 100%;
+    }
+    .footerInfo {
+        padding-bottom: 2%;
+        border-bottom: 1px solid #37332a;
+    }
+    .fashionLinks {
+        border-bottom: 1px solid #37332a;
+    }
+    .footerNews {
+        border-bottom: 1px solid #37332a;
+        padding-top: 2%;
+    }
+    .fashionLinks {
+        justify-content: center;
+        align-items: center;
+    }
+    .footerLinks h4 {
+        text-align: start;
+    }
 }
